# Presentation-Well-Typed

./: Presentation-Well-Typed.cabal  README.md
app/: align-cli.hs
src/: StringAlignment.hs
